fix: reported CSS and layout bugs

--- a/wdl-doc/theme/src/main.css
+++ b/wdl-doc/theme/src/main.css
@@ -1,5 +1,5 @@
 /* FIXME: remove !important, known anti-pattern that leads to CSS specificity wars */
-@import "tailwindcss" important;
+@import "tailwindcss";
 
 /* Dark mode enabled with the `dark` class */
 @custom-variant dark (&:where(.dark, .dark *));
@@ -44,16 +44,17 @@
 
 @layer components {
   .layout__container {
-    @apply flex flex-row items-start;
+    @apply h-screen w-screen flex pl-72;
   }
   .layout__sidebar-left {
-    @apply flex-none top-0 h-screen min-w-[269px] max-w-[269px] sticky;
+    @apply fixed left-0 top-0 h-screen w-72 overflow-x-hidden;
   }
   .layout__main-center {
-    @apply flex grow p-4 ml-4 bg-slate-950 text-slate-300;
+    @apply flex-grow bg-slate-950 text-slate-300 h-screen w-screen overflow-y-auto p-10;
   }
+  /* should take up w-72 space and NOT grow or shrink */
   .layout__sidebar-right {
-    @apply flex-none top-0 right-0 h-screen min-w-[269px] max-w-[269px] sticky;
+    @apply w-72 max-xl:hidden;
   }
 
   .workflow__container {
@@ -75,8 +76,15 @@
   .workflow__section-text {
     @apply mt-3 text-slate-300 text-sm;
   }
+  /* We need tables to be scrollable on the X axis */
+  .workflow__table-outer-container {
+    @apply overflow-x-auto;
+  }
+  .workflow__table-inner-container {
+    @apply w-3xl md:w-4xl lg:w-auto;
+  }
   .workflow__table {
-    @apply mt-3;
+    @apply mt-3 table-fixed;
   }
   .workflow__table th {
     @apply text-slate-50 text-left py-3.5 border-b border-b-slate-700 pr-5;
@@ -90,4 +98,8 @@
   /* workflow meta-specific, renders <ul> + <li> */
   .workflow__meta-records {}
   .workflow__meta-record {}
+
+  .docs-tree__container {
+    @apply flex flex-col h-full w-full gap-y-3 text-nowrap pt-4 pl-4 bg-slate-900 text-slate-400;
+  }
 }
